# selenium-mcp

./: LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements.txt  server.py  smithery.yaml
.agents/workflows/: publish-pypi.md
.github/workflows/: publish.yml
config/: default.yaml  logging_config.py  settings.py
driver/: factory.py  session.py  session_manager.py
events/: bidi_listeners.py  dispatcher.py  network_interceptor.py
models/: events.py  exceptions.py  network.py  session.py
tests/: test_config.py  test_dispatcher.py  test_models.py  test_session_manager.py  test_tools.py
tools/: alert_tools.py  base.py  cookie_tools.py  frame_tools.py  interaction_tools.py  log_tools.py  navigation_tools.py  registry.py  script_tools.py  session_tools.py  window_tools.py
