[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_selenium"
version = "1.0.2"
description = "Production-ready MCP server integrating Selenium 4 (BiDi) for browser automation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SCV-Consultants" },
]
keywords = ["mcp", "selenium", "browser-automation", "bidi", "webdriver", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "selenium>=4.20.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "webdriver-manager>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/SCV-Consultants/selenium-mcp"
Repository = "https://github.com/SCV-Consultants/selenium-mcp"
Issues = "https://github.com/SCV-Consultants/selenium-mcp/issues"

[project.scripts]
selenium-mcp = "server:main"
mcp_selenium = "server:main"

[tool.setuptools]
py-modules = ["server", "conftest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "driver*", "events*", "models*", "tools*"]

[tool.setuptools.package-data]
config = ["*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
